--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                         const id = event.serialNumber;
 
                         if (registeredIDs.includes(id)) {
-                            window.location.href = '/welcome.html';
+                            window.location.href = 'NFC-Clicker/welcome.html';
                         } else {
                             errorMessage.style.display = 'block';
                         }
