--- a/welcome.html
+++ b/welcome.html
@@ -58,7 +58,7 @@
     <div class="welcome-container">
         <h1>ようこそ！</h1>
         <p>ログインに成功しました。サービスをお楽しみください。</p>
-        <a href="/">戻る</a>
+        <a href="index.html">戻る</a>
     </div>
 </body>
 </html>
